--- a/hello-theme-child/asset/custom-style.css
+++ b/hello-theme-child/asset/custom-style.css
@@ -200,6 +200,8 @@ input#form-field-search_loan, input#form-field-search_loan_city {
     right: 0;
     width: 97%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.13);
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 .autocomplete-items div {
